added Spring Boot to the BL and DAL layer. also adapted already-existing code to it